# meshquisse

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: FUNDING.yml
assets/meshes/: arena.mesh  arena_my_merge.mesh  aurora.mesh  aurora_merged.mesh  from_arena.mesh  from_arena_simple.mesh  quad.mesh  quad_plus_one.mesh
doc/: mesh_2_format.txt  meshquisse.drawio
examples/: merge_mesh.rs  meshquisse.rs  meshquisse_convex.rs  tools.rs
examples/polyanya/: LICENSE
src/: interact_mesh.rs  lib.rs  main.rs  meshmerger.rs  navmesh.rs  polygon_mesh_data.rs  tools.rs  trianglemerger.rs
src/mesh_data/: merge_triangles.rs  mod.rs  only_triangles.rs
